feat(builtInPlugins/fileConfig): 添加文件配置插件功能 fix(core/abnormal): 修正类名大小写错误 refactor(fileMapping/__init__): 更新文件初始化参数 refactor(core/Class): 添加 pluginConfig 参数并更新初始化逻辑 feat(core/config): 添加 generateObjects 和 configureFolders 函数 feat(core/parameterApplication): 更新 Config 类以支持用户插件配置 fix(builtInPlugins/Folders): 删除异常类并更新配置路径引用

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,10 @@
 /venv/
 /plugins/
 /plugins/__pyache__
+/core/__pyache__
 /fileMapping/__pyache__
 /fileMapping/core/__pyache__
+/builtInPlugins/__pycache__
+
+*/__pycache__
+*.pyc
